Reapply "WICKET-7135 Work on deprecation warnings (#1049)"
This reverts commit 9b5d6b87a7ec5b124886096fe79470115d75dd23.