@@ -24,6 +24,7 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.io.File;
+import java.net.URI;
 import java.net.URL;
 import java.util.Locale;
 
@@ -108,7 +109,7 @@ class CachingResourceStreamLocatorTest
 
 		String style = null;
 		String variation = null;
-		Locale locale = new Locale("nl", "NL");
+		Locale locale = Locale.of("nl", "NL");
 		String extension = null;
 
 		String filename = "org/apache/wicket/ajax/res/js/wicket-ajax-jquery.js";
@@ -138,7 +139,7 @@ class CachingResourceStreamLocatorTest
 
 		String style = null;
 		String variation = null;
-		Locale locale = new Locale("nl", "NL");
+		Locale locale = Locale.of("nl", "NL");
 		String extension = null;
 
 		String filename = "org/apache/wicket/ajax/res/js/wicket-ajax-jquery.js";
@@ -218,7 +219,7 @@ class CachingResourceStreamLocatorTest
 	{
 		IResourceStreamLocator resourceStreamLocator = mock(IResourceStreamLocator.class);
 
-		UrlResourceStream urs = new UrlResourceStream(new URL("file:///"));
+		UrlResourceStream urs = new UrlResourceStream(URI.create("file:///").toURL());
 
 		when(resourceStreamLocator.locate(String.class, "path")).thenReturn(urs);
 
