@@ -196,15 +196,15 @@ public class ResourceUtil
 			String parts[] = locale.toLowerCase(Locale.ROOT).split("_", 3);
 			if (parts.length == 1)
 			{
-				return new Locale(parts[0]);
+				return Locale.of(parts[0]);
 			}
 			else if (parts.length == 2)
 			{
-				return new Locale(parts[0], parts[1]);
+				return Locale.of(parts[0], parts[1]);
 			}
 			else if (parts.length == 3)
 			{
-				return new Locale(parts[0], parts[1], parts[2]);
+				return Locale.of(parts[0], parts[1], parts[2]);
 			}
 			else
 			{
